# elrond_task_rust

./: Cargo.toml  README.md  Simple.json
src/: blockchain.rs  config.rs  main.rs  mt.rs  utils.rs
